--- a/src/framework/preferences/css/stylus/SeparatedPanelPrefsEditorFrame.styl
+++ b/src/framework/preferences/css/stylus/SeparatedPanelPrefsEditorFrame.styl
@@ -44,9 +44,9 @@ html {
 
     // Preference Panels
     .fl-prefsEditor-panels {
-        white-space: nowrap;
-        display: table;
-        border-spacing: 20px 0px;
+        white-space: pre-line;
+        border-spacing: 175px 0;
+        overflow: scroll;
 
         .fl-prefsEditor-panel {
             border: 1px solid #615e59;
@@ -140,5 +140,7 @@ html {
     }
 }
 
-// Theming
+
+
+// Themingod
 build-themes-separatedPanelPrefsEditorFrame(themes);
